--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>加油！
+    <title>jiayou
     </title>
     
     <script>
@@ -122,4 +122,5 @@
         <img src="4.jpg" alt="无法显示!?O.o" class="circle-img">
     </div>
 </body>
+
 </html>
